# Swept-Volume

./: CMakeLists.txt  README.md
app/: general_sweep.cpp
app/include/: MeshSDF.h  post_processing.h  trajectory.h
cmake/: FindLIBIGL.cmake  Marching4DLib.cmake  arrangement.cmake  cli11.cmake  imshader.cmake  libigl.cmake  mtetcol.cmake  nanothread.cmake  stf.cmake  sweep_labeling_lib.cmake
data/results/flippingDonut/: features.json
data/test/: 1-sphere.json  grid_1.2.json  grid_20_1.2.json  grid_30.json  grid_ballroll.json  grid_test.json  init.msh
data/vipss_data/: ball.xyz  ball_2342.xyz  botijo_1427_coeff  botijo_1427_out.xyz  csg_1436.xyz  csg_coeff  csg_out.xyz  eight_717_coeff  eight_717_out.xyz  fertility.xyz  fertility_coeff.txt  kitten.xyz  kitten_893.coeff  kitten_893.xyz  kitten_coeff  wheel.xyz  wheel_coeff
general_sweep.trace/: form.template
general_sweep.trace/Trace1.run/: RunIssues.storedata
general_sweep.trace/corespace/: MANIFEST.plist
general_sweep.trace/corespace/run1/core/core-config/: exposedTableInfo.plist
general_sweep.trace/corespace/run1/core/stores/indexed-store-17/: bulkstore  bulkstore_descriptor  spindex.0
general_sweep.trace/corespace/run1/core/stores/indexed-store-18/: bulkstore  spindex.0
general_sweep.trace/corespace/run1/core/stores/indexed-store-19/: bulkstore  spindex.0
general_sweep.trace/corespace/run1/core/stores/indexed-store-21/: bulkstore  bulkstore_descriptor  spindex.0
general_sweep.trace/corespace/run1/core/stores/indexed-store-22/: bulkstore  spindex.0
general_sweep.trace/corespace/run1/core/table-manager/: tables.plist
general_sweep.trace/corespace/run1/core/uniquing/: strings
general_sweep.trace/symbols/stores/: 1816E900-805C-3966-9526-5338FEA0E502.symbolsarchive  20EBE22E-66E2-3556-B70B-54A04E8363A8.symbolsarchive  225CB279-20A9-381D-A163-D2BE263F5327.symbolsarchive  24F92DD3-0CD3-3006-AA86-D14E43F01E6F.symbolsarchive  27ED40C8-6B18-3266-93A7-387FB33CA186.symbolsarchive  433AE76C-5662-39C9-8ED7-3A6D330796A9.symbolsarchive  53484980-83FC-35E9-8786-E6CF5EBA9471.symbolsarchive  65B9D3A4-BAEC-37DD-8282-694196849244.symbolsarchive  8D27EC9A-D919-31A4-8DF8-31A2FD2E593C.symbolsarchive  9E4556E4-8822-3111-A801-02066E2FDEBC.symbolsarchive  ACA43A8D-6369-3A2C-AF92-3D4C458523D6.symbolsarchive  C9232B93-4200-3977-BC04-B8BBA9FAE866.symbolsarchive  F84C7137-C1FF-3627-A6E5-47BB30C98011.symbolsarchive
src/: adaptive_column_grid.h  col_gridgen.cpp  col_gridgen.h  init_grid.h  io.cpp  io.h  ref_crit.cpp  ref_crit.h  timer.cpp  timer.h  trajectory.h
swept_volume(arrangement).trace/: form.template
swept_volume(arrangement).trace/Trace1.run/: RunIssues.storedata
swept_volume(arrangement).trace/Trace4.run/: RunIssues.storedata
swept_volume(arrangement).trace/corespace/: MANIFEST.plist
swept_volume(arrangement).trace/corespace/run1/core/core-config/: exposedTableInfo.plist
swept_volume(arrangement).trace/corespace/run1/core/table-manager/: tables.plist
swept_volume(arrangement).trace/corespace/run1/core/uniquing/: strings
swept_volume(arrangement).trace/corespace/run4/core/core-config/: exposedTableInfo.plist
swept_volume(arrangement).trace/corespace/run4/core/table-manager/: tables.plist
swept_volume(arrangement).trace/corespace/run4/core/uniquing/: strings
swept_volume(arrangement).trace/symbols/stores/: 05D6D44D-34A5-3D11-9437-F0C116E55DCD.symbolsarchive  20EBE22E-66E2-3556-B70B-54A04E8363A8.symbolsarchive  225CB279-20A9-381D-A163-D2BE263F5327.symbolsarchive  24F92DD3-0CD3-3006-AA86-D14E43F01E6F.symbolsarchive  27ED40C8-6B18-3266-93A7-387FB33CA186.symbolsarchive  3262CD12-9CC3-3417-895F-E859872C3848.symbolsarchive  53484980-83FC-35E9-8786-E6CF5EBA9471.symbolsarchive  5A396DE8-A5FE-3FB3-8C23-9353859F03BF.symbolsarchive  8D27EC9A-D919-31A4-8DF8-31A2FD2E593C.symbolsarchive  9E4556E4-8822-3111-A801-02066E2FDEBC.symbolsarchive  A601C7F4-98F7-3E66-A440-944B3D568E19.symbolsarchive  A7A38C3E-6FB7-3358-AF6F-AF5C3823549F.symbolsarchive  ACA43A8D-6369-3A2C-AF92-3D4C458523D6.symbolsarchive  C211DDEA-E3C5-351D-8619-900C01BEDFC9.symbolsarchive  C22CD21F-8272-3A9A-BF27-114E0B192EFC.symbolsarchive  C9232B93-4200-3977-BC04-B8BBA9FAE866.symbolsarchive
tests/: test_sweep.cpp
(+98 files in other folders)
